done with layout/need to fix scrollbars

--- a/css/index.css
+++ b/css/index.css
@@ -66,13 +66,19 @@ h1, h2, h3, h4, h5 {
 }
 
 .container {
-  width: 880px;
+  width: 800px;
   /* TB LR */
   margin: 0 auto;
 }
 @media (max-width: 800px){
     .container {
-        width: 800px;
+        width: 95%;
+        margin: 0px;
+    }
+}
+@media (max-width: 500px){
+    .container {
+        width: 100%;
     }
 }
 
@@ -87,6 +93,7 @@ header {
     }
 
 }
+
 header nav {
   display: flex;
   width: 500px;
@@ -98,7 +105,18 @@ header nav {
         width: 589px;
         margin: 40px auto;
         display: flex;
+        
       
+    }
+}
+@media (max-width: 500px){
+    header nav{
+        flex-direction: column;
+        justify-content: center;
+        width: 500px;
+    } 
+    header nav a:last-child{
+        border-bottom: 1px solid gray;
     }
 }
 
@@ -107,6 +125,17 @@ header nav a {
   font-size: 14px;
   color: gray;
   text-decoration: none;
+}
+@media (max-width: 500px){
+    header nav a{
+        display: flex;
+        justify-content: center;
+        margin-right: 0px;
+        font-size: 18px;
+        border-top: 1px solid gray;
+        padding: 20px 0px;
+        
+    }
 }
 
 header nav a:hover {
@@ -187,14 +216,40 @@ display: flex;
 .main-content .top-content {
   padding: 0 10px;
   display: flex;
+  justify-content: space-around;
+}
+@media(max-width: 800px){
+    .main-content .top-content {
+        padding: 0px 0px;
+        margin: 0 20px;
+
+    }
+    .main-content {
+        margin-top: 40px;
+    }
+}
+@media(max-width:500px){
+    .main-content .top-content {
+        flex-direction: column;
+        width: 500px;
+        margin: 0px 33.75px;
+    }
 }
 
 .main-content .top-content .text-content {
-  width: 410px;
+  width: 44%;
   display: flex;
   flex-direction: column;
-
-  margin-right: 34px;
+    margin-right: 34px
+}
+@media (max-width:500px){
+    .main-content .top-content .text-content{
+        width: 423px;
+        margin: 0px;
+    }
+    .main-content .top-content .text-content:first-child{
+        margin-bottom: 40px;
+    }
 }
 
 .main-content .top-content .text-content:last-child {
@@ -203,6 +258,12 @@ display: flex;
 
 .main-content .middle-img {
   margin-top: 45px;
+  width: 95%;
+}
+@media(max-width: 800px){
+    .main-content .middle-img{
+        margin: 40px 20px 0px 20px;
+    }
 }
 
 .main-content .bottom-content {
@@ -212,20 +273,41 @@ display: flex;
 }
 
 .main-content .bottom-content .text-content {
-  width: 275px;
+  width: 29%;
   display: flex;
   flex-direction: column;
   margin-right: 12px;
+}
+@media(max-width: 800px){
+    .main-content .bottom-content {
+        justify-content: space-around;
+    }
 }
 
 .main-content .bottom-content .text-content:last-child {
   margin-right: 0;
 }
-
+@media (max-width: 500px){
+    .main-content .bottom-content{
+        flex-direction: column;
+        margin: 30px 33.750px;
+        padding: 0px;
+    
+    }
+    .main-content .bottom-content .text-content{
+        width: 423px;
+        margin-bottom: 60px;
+    }
+}
 .contact {
   margin-top: 57px;
   border-top: 1px solid black;
   padding: 39px 10px 0;
+}
+@media(max-width:500px){
+    .contact{
+        margin-top: 0px;
+    }
 }
 
 .contact p {
@@ -278,6 +360,11 @@ footer {
   justify-content: space-between;
   
 }
+@media(max-width: 800px){
+    footer p {
+        margin: 0 auto;
+    }
+}
 
 .facts {
   text-align: left;
@@ -287,7 +374,3 @@ footer {
 .facts p {
   line-height: 1.3;
   }
-
-  @media(max-width: 800px){
-    
-}
